atualizando projeto final

--- a/Projeto Final/candidatos.html
+++ b/Projeto Final/candidatos.html
@@ -15,6 +15,6 @@
     </div>
     <div id="resultado"></div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.js" integrity="sha256-BTlTdQO9/fascB1drekrDVkaKd9PkwBymMlHOiG+qLI=" crossorigin="anonymous"></script> <!--Aprender porque cargas dágua só funciona com essa jquery-->
-    <script src="testeapi.js"></script>
+    <script src="candidatosapi.js"></script>
 </body>
 </html>
