--- a/Projeto Final/index.html
+++ b/Projeto Final/index.html
@@ -16,13 +16,14 @@
     <header>
         <div id="container">
         <img class="img" src="imagens/cooperativa.png">
-    
-        <div id="navegacao">
+        </div>
+        
+        <nav id="navegacao">
         <a href="index.html">HOME</a> |
         <a href="quem-somos.html">QUEM SOMOS</a> |
         <a href="cards.html">CARDS</a> |
         <a href="contato.html">CONTATO</a>
-        </div>	
+        </nav>	
     </header>
 
     <section id="conteudo"> 
@@ -42,8 +43,9 @@
     </div>
 
     <footer>
-        <h4 class="centralizar">Todos os direitos reservados</h4>
+        <h6 class="centralizar">@copy:Cooperativa Popular<br/>Squad Team Six</h6>
     </footer>
+    <script src="js/scripts.js"></script>
 
 </body>
 </html>
