--- a/Projeto Final/wagnerindex.html
+++ b/Projeto Final/wagnerindex.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #40026C;">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><span class="fontenavbar">Cooperativa Popular</span></a>
+              <a class="navbar-brand" href="#"><span class="fontebranca">Cooperativa Popular</span></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
