--- a/Projeto Final/cards.html
+++ b/Projeto Final/cards.html
@@ -16,18 +16,17 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #40026C;">
+        <nav class="navbar navbar-expand-lg navbar-dark titulo">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><span class="fontebranca">Cooperativa Popular</span></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">HOME</a>
-                  <a class="nav-link" href="#">QUEM SOMOS</a>
-                  <a class="nav-link" href="candidatos.html">CARDS</a>
-                  <a class="nav-link" href="#">CONTATOS</a>
+              <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
+                <div class="navbar-nav ">
+                    <a class="nav-link" href="index.html">HOME</a>
+                    <a class="nav-link" href="quemsomos.html">QUEM SOMOS</a>
+                    <a class="nav-link active" aria-current="page" href="#">CARDS</a>
                 </div>
               </div>
             </div>
@@ -35,13 +34,11 @@
     </header>
 
    
-    <div>
-        <img class="img" src="imagens/cooperativa.png">
-    </div>
+
 
 
     <section id="conteudo"> 
-        <h1> <strong>HISTÓRIA DO COOPERATIVISMO</strong></h1>
+        <h1> <strong>CARDS</strong></h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo earum sit, a ducimus, reiciendis nam aspernatur et impedit, suscipit accusamus assumenda? Ratione natus, corporis libero optio maiores tempore voluptatem eveniet!</p>
         
     </section>
