--- a/Projeto Final/quemsomos.html
+++ b/Projeto Final/quemsomos.html
@@ -24,9 +24,9 @@
               </button>
               <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
                 <div class="navbar-nav ">
-                  <a class="nav-link active" aria-current="page" href="#">HOME</a>
-                  <a class="nav-link" href="quemsomos.html">QUEM SOMOS</a>
-                  <a class="nav-link" href="candidatos.html">CARDS</a>
+                    <a class="nav-link" href="index.html">HOME</a>
+                    <a class="nav-link active" aria-current="page" href="#">QUEM SOMOS</a>
+                    <a class="nav-link" href="candidatos.html">CARDS</a>
                 </div>
               </div>
             </div>
@@ -34,13 +34,11 @@
     </header>
 
    
-    <div>
-        <img class="imagemdefundo" src="imagens/cooperativa.png">
-    </div>
+
 
 
     <section id="conteudo"> 
-        <h1> <strong>HISTÓRIA DO COOPERATIVISMO</strong></h1>
+        <h1> <strong>QUEM SOMOS</strong></h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo earum sit, a ducimus, reiciendis nam aspernatur et impedit, suscipit accusamus assumenda? Ratione natus, corporis libero optio maiores tempore voluptatem eveniet!</p>
         
     </section>
