--- a/Projeto Final/wagnertestecard.html
+++ b/Projeto Final/wagnertestecard.html
@@ -49,7 +49,7 @@
 
 
 
-            <!-- Button trigger modal -->
+            <!-- Botão pra abrir o modal-->
             <button type="button" class="btn  fundochocolate" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Botão inicial do modal
             </button>
@@ -67,11 +67,12 @@
                     <div class="modal-body">
                       Texto dentro do modal expandido
                     </div>
+
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Fechar
                       </button>
-                      <button type="button" class="btn btn-primary">
+                    <button type="button" class="btn btn-primary">
                         Inativar?
                       </button>
                     </div>
