--- a/Projeto Final/wagnertestecard.html
+++ b/Projeto Final/wagnertestecard.html
@@ -24,7 +24,7 @@
     <!--Aprender porque cargas dágua só funciona com essa jquery-->
     <script src="candidatos.api"></script>
     <link rel="icon" href="imagens/logo.ico" sizes="any" />
-    <link rel="stylesheet" href="wagnercss.css" />
+    <link rel="stylesheet" href="estilo.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
