--- a/Projeto Final/wagnertestecard.html
+++ b/Projeto Final/wagnertestecard.html
@@ -24,7 +24,7 @@
     <!--Aprender porque cargas dágua só funciona com essa jquery-->
     <script src="candidatos.api"></script>
     <link rel="icon" href="imagens/logo.ico" sizes="any" />
-    <link rel="stylesheet" href="wagnercss.css" />
+    <link rel="stylesheet" href="estilo.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <meta charset="UTF-8" />
@@ -49,7 +49,7 @@
 
 
 
-            <!-- Botão pra abrir o modal-->
+            <!-- Button trigger modal -->
             <button type="button" class="btn  fundochocolate" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Botão inicial do modal
             </button>
@@ -67,12 +67,11 @@
                     <div class="modal-body">
                       Texto dentro do modal expandido
                     </div>
-
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         Fechar
                       </button>
-                    <button type="button" class="btn btn-primary">
+                      <button type="button" class="btn btn-primary">
                         Inativar?
                       </button>
                     </div>
