--- a/Projeto Final/oportunidades.html
+++ b/Projeto Final/oportunidades.html
@@ -26,7 +26,7 @@
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
                   <a class="nav-link active" aria-current= "page" href="quemsomos.html">QUEM SOMOS</a>
-                  <a class="nav-link" href="candidatos.html">CANDIDATOS</a>
+                  <a class="nav-link active" aria-current="page" href="candidatos.html">CANDIDATOS</a>
                   <a class="nav-link active" aria-current="page" href="oportunidades.html">NOVAS OPORTUNIDADES</a>
                 </div>
               </div>
