--- a/Projeto Final/candidatos.html
+++ b/Projeto Final/candidatos.html
@@ -33,12 +33,12 @@
             </h5>
 
             <!-- Botão pra abrir o modal-->
-            <button type="button" class="btn  fundochocolate" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn  fundochocolate" data-bs-toggle="modal" data-bs-target="#modal0">
                 Clique para dados de contato
             </button>
 
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            <div class="modal fade" id="modal0" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -90,12 +90,12 @@
             </h5>
 
             <!-- Botão pra abrir o modal-->
-            <button type="button" class="btn  fundochocolate" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn  fundochocolate" data-bs-toggle="modal" data-bs-target="#modal1">
                 Clique para dados de contato
             </button>
 
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -147,12 +147,12 @@
             </h5>
 
             <!-- Botão pra abrir o modal-->
-            <button type="button" class="btn  fundochocolate" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn  fundochocolate" data-bs-toggle="modal" data-bs-target="#modal2">
                 Clique para dados de contato
             </button>
 
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            <div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -204,12 +204,12 @@
             </h5>
 
             <!-- Botão pra abrir o modal-->
-            <button type="button" class="btn  fundochocolate" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn  fundochocolate" data-bs-toggle="modal" data-bs-target="#modal3">
                 Clique para dados de contato
             </button>
 
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            <div class="modal fade" id="modal3" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -261,12 +261,12 @@
             </h5>
 
             <!-- Botão pra abrir o modal-->
-            <button type="button" class="btn  fundochocolate" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn  fundochocolate" data-bs-toggle="modal" data-bs-target="#modal4">
                 Clique para dados de contato
             </button>
 
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            <div class="modal fade" id="modal4" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
