--- a/Projeto Final/oportunidades.html
+++ b/Projeto Final/oportunidades.html
@@ -51,7 +51,7 @@
             <div class="card-body">
               <h5 class="card-title">Vendedor Externo</h5>
               <p class="card-text">Atuar com venda externa de lubrificantes, prospecção de novos clientes. Desejável nível superior em administração.<br>Empresa confidencial<br>De R$3.000,00 a R$4.000,00</p>
-              <a href="#" class="btn btn-success">Quero me candidatar</a>
+              <a href="#" class="btn  fundochocolate">Quero me candidatar</a>
             </div>
           </div>
         </div>
@@ -60,7 +60,7 @@
             <div class="card-body">
               <h5 class="card-title">Analista de Segurança da Informação</h5>
               <p class="card-text">Quer ser Alterdatano e fazer parte de uma das maiores empresas de tecnologia 100% nacional? Requisitos: Ensino superior completo na área<br>Alterdata Software<br>CLT + benefícios - 100% home office</p>
-              <a href="#" class="btn btn-success">Quero me candidatar</a>
+              <a href="#" class="btn  fundochocolate">Quero me candidatar</a>
             </div>
           </div>
         </div>
@@ -69,7 +69,7 @@
               <div class="card-body">
                 <h5 class="card-title">Coordenador de Vendas</h5>
                 <p class="card-text">Cordenação de estande de vendas de imóveis. Contato com imobiliárias e clientes.<br>Teresópolis<br>R$2.000,00 a R$3.000,00</p>
-                <a href="#" class="btn btn-success">Quero me candidatar</a>
+                <a href="#" class="btn  fundochocolate">Quero me candidatar</a>
               </div>
             </div>
           </div>
@@ -81,7 +81,7 @@
               <div class="card-body">
                 <h5 class="card-title">Professor de Inglês</h5>
                 <p class="card-text">Ministra e prepara o material didático  de aula conforme orientaçã e conteúdo previamente distribuído.<br>Celin Centro de Estudos da Lingua Inglesa<br>R$1.000,00 a R$2.000,00</p>
-                <a href="#" class="btn btn-success">Quero me candidatar</a>
+                <a href="#" class="btn  fundochocolate">Quero me candidatar</a>
               </div>
             </div>
           </div>
@@ -90,7 +90,7 @@
               <div class="card-body">
                 <h5 class="card-title">Auxiliar Administrativo</h5>
                 <p class="card-text">Atendimento ao público, lançamemnto em sistema, conferência de documentos, preenchimento de quadro resumo.<br>Minas Gerais<br>R$1.500,00 a R$2.500,00</p>
-                <a href="#" class="btn btn-success">Quero me candidatar</a>
+                <a href="#" class="btn  fundochocolate">Quero me candidatar</a>
               </div>
             </div>
           </div>
@@ -99,7 +99,7 @@
               <div class="card-body">
                 <h5 class="card-title">Recepcionista</h5>
                 <p class="card-text">Missão do cargo: atender os pacientes na recepção da clínica, assegurando um excelente atendimento, assim como um bom funcionamento da recepção.<br>Orthopride<br>A combinar</p>
-                <a href="#" class="btn btn-success">Quero me candidatar</a>
+                <a href="#" class="btn  fundochocolate">Quero me candidatar</a>
               </div>
             </div>
           </div>
@@ -108,7 +108,7 @@
               <div class="card-body">
                 <h5 class="card-title">Estagiário</h5>
                 <p class="card-text">Estágio interno e externo, trabalhar junto de uma equipe comercial em prol do resultado da mesma.<br>CTOP Unidade Teresóplois<br>R$1.200,00 a R$2.100,00</p>
-                <a href="#" class="btn btn-success">Quero me candidatar</a>
+                <a href="#" class="btn  fundochocolate">Quero me candidatar</a>
               </div>
             </div>
           </div>
@@ -117,7 +117,7 @@
               <div class="card-body">
                 <h5 class="card-title">Promotor</h5>
                 <p class="card-text">Fazer a organização, conservação e precificação dos podutos, bastecimento de mercadorias em gôndolas<br>São Gonçalo<br>R$1.200,00 a R$2.100,00</p>
-                <a href="#" class="btn btn-success">Quero me candidatar</a>
+                <a href="#" class="btn  fundochocolate">Quero me candidatar</a>
               </div>
             </div>
           </div>
